<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/NombreR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop2"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Inombre_completo"

        android:inputType="text"
        android:ems="10"/>

    <EditText
        android:id="@+id/FechaR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop2"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Ifecha_de_nacimiento"

        android:inputType="date"
        android:ems="10"/>



    <EditText
        android:id="@+id/TelefonoR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop2"
        android:layout_gravity="center_horizontal"
        android:hint="@string/telefono"

        android:inputType="number"
        android:ems="10"/>

    <EditText
        android:id="@+id/EmailR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop2"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"

        android:inputType="textEmailAddress"
        android:ems="10"/>

    <EditText
        android:id="@+id/DescripcionR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop2"
        android:layout_gravity="center_horizontal"
        android:hint="@string/descripcion_del_contacto"

        android:inputType="text"
        android:ems="10"/>

    <Button
        android:id="@+id/ButtonR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop2"
        android:text="@string/siguiente"/>



</LinearLayout>