<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity2">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBot"
        android:text="@string/titulo"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/txtSize"/>


    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBot"
        android:text="@string/nombre"
        android:textSize="@dimen/txtSize"/>


    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBot"
        android:text="@string/fecha"
        android:textSize="@dimen/txtSize"/>


    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBot"
        android:text="@string/telefono"
        android:textSize="@dimen/txtSize"/>



    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBot"
        android:text="@string/email"
        android:textSize="@dimen/txtSize"/>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBot"
        android:text="@string/descripcion"
        android:textSize="@dimen/txtSize"/>

    <Button
        android:id="@+id/tvButton"
        android:theme="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop2"
        android:text="@string/editar"/>




</LinearLayout>